# compliance-io

./: .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  README.md  opencontrol.py  pyproject.toml  setup.py
.github/workflows/: build.yml  codeql-analysis.yml
compliance_io/: opencontrol.py
compliance_io/oscal/: component.py  oscal.py  ssp.py
complianceio/: catalog.py  catalog31.py  opencontrol.py
complianceio/oscal/: catalogio.py  component.py  oscal.py  ssp.py  utilities.py
examples/: catalog.py  defenestrate.py  oc_gaps.py  oc_to_oscal_components.py  opencontrol.yaml  to_csv.py  to_jsonl.py
tests/: NIST_SP-800-53_rev5_test.json  test_catalogio.py  test_opencontrol.py  test_oscal_component.py  test_oscal_ssp.py
tests/schemas/1.0.0/: oscal_assessment-plan_schema.json  oscal_assessment-results_schema.json  oscal_catalog_schema.json  oscal_complete_schema.json  oscal_component_schema.json  oscal_poam_schema.json  oscal_profile_schema.json  oscal_ssp_schema.json
tests/schemas/1.0.0-rc1/: oscal_assessment-plan_schema.json  oscal_assessment-results_schema.json  oscal_catalog_schema.json  oscal_component_schema.json  oscal_poam_schema.json  oscal_profile_schema.json  oscal_ssp_schema.json
