[tool.poetry]
name = "compliance-io"
version = "0.1.0"
description = "Python library for reading/writing compliance as code"
authors = ["Tom Wood <tom.wood@civicactions.com>"]
license = "GNU General Public Licence v3"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
PyYAML = "^5.3.1"
pydantic = "^1.7.3"
python-slugify = "^4.0.1"
rtyaml = "^1.0.0"
blinker = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
