[tool.poetry]
name = "complianceio"
version = "0.1.0-alpha.1"
description = "Python library for reading/writing compliance as code"
authors = ["Tom Wood <tom.wood@civicactions.com>"]
license = "GNU General Public Licence v3"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
PyYAML = "^5.3.1"
pydantic = "^1.7.3"
python-slugify = "^4.0.1"
rtyaml = "^1.0.0"
blinker = "^1.4"
GitPython = "^3.1.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pre-commit = "^2.9.3"
flake8 = "^3.8.4"
attribution = "^1.5.2"


[tool.attribution]
name = "compliance-io"
package = "complianceio"
signed_tags = false
version_file = false

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
