[tool.poetry]
name = "complianceio"
version = "0.1.0-alpha.3"
description = "Python library for reading/writing compliance as code"
authors = ["Tom Wood <tom.wood@civicactions.com>",
"Fen Labalme <fen.labalme@civicactions.com>"]
license = "GNU General Public Licence v3"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyyaml = "^6.0.1"
pydantic = "^1.10.12"
python-slugify = "^8.0.1"
rtyaml = "^1.0.0"
blinker = "^1.4"
GitPython = "^3.1.12"
openpyxl = "^3.0.9"
orjson = "^3.6.6"
compliance-trestle = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
attribution = "^1.5.2"


[tool.attribution]
name = "compliance-io"
package = "complianceio"
signed_tags = false
version_file = false

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
